--- a/src/PAGOFACIL/css/styles.css
+++ b/src/PAGOFACIL/css/styles.css
@@ -10,6 +10,7 @@ body {
     color: #fff;
     font-family: "Lato", sans-serif;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .tablas {
