--- a/src/SUPERVIELLE/css/styles.css
+++ b/src/SUPERVIELLE/css/styles.css
@@ -2,6 +2,7 @@ body {
     background-color: #222;
     color: #fff;
     font-family: "Lato", sans-serif;
+    overflow-x: hidden;
 }
 
 #dropArea {
